error
  File "kafka/kafka_producer.py", line 13
    timestamp = datetfrom kafka import KafkaProducer
                              ^
SyntaxError: invalid syntax

